# elk-logging

./: Dockerfile  docker-compose.yml  filebeat.yml  logstash.conf  main.py  pyproject.toml
