[tool.poetry]
name = "elk-logging"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]
readme = "README.md"
packages = [{include = "elk_logging"}]

[tool.poetry.dependencies]
python = "^3.11"
faker = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
